--- a/day3/dc4/package.json
+++ b/day3/dc4/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "day-2",
+  "name": "dc4",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "material-ui": "^0.18.1",
+    "muicss": "^0.9.16",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-icons": "^2.2.5",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-router": "^4.1.1"
   },
   "devDependencies": {
-    "react-scripts": "1.0.6"
+    "react-scripts": "1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
