--- a/dc4/package.json
+++ b/dc4/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^4.1.0",
     "material-ui": "^0.18.1",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "reactfire": "^1.0.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
