--- a/NickMorningChallenge8/package.json
+++ b/NickMorningChallenge8/package.json
@@ -27,6 +27,7 @@
     "react-native-icons": "^0.7.1",
     "react-native-nav": "^1.2.0",
     "react-native-navigation-bar": "^0.2.1",
+    "react-native-side-menu": "^0.20.1",
     "react-native-vector-icons": "^4.2.0",
     "react-router-native": "^4.1.1"
   }
