--- a/NickMorningChallenge8/package.json
+++ b/NickMorningChallenge8/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "expo": "^17.0.0",
+    "firebase": "^4.1.2",
     "react": "16.0.0-alpha.6",
     "react-fontawesome": "^1.6.1",
     "react-native": "^0.44.0",
